--- a/gb/19/9/12/n11516751.md
+++ b/gb/19/9/12/n11516751.md
@@ -1,53 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÊÀ½ç´óÑ§ÅÅÃû Å£½òµÚÒ» Ì¨´ó½ø²½50Ãû</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wdr216/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/wdr216/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/wdr216/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/wdr216/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/wdr216/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/wdr216/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/wdr216/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/wdr216/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wdr216/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/wdr216/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/wdr216/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/wdr216/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/wdr216/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸–ç•Œå¤§å­¦æŽ’å ç‰›æ´¥ç¬¬ä¸€ å°å¤§è¿›æ­¥50å</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ12ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÕÅÔ­ÕÃÌ¨ÍåÌ¨±±±¨µ¼£©Ó¢¹úÌ©ÎîÊ¿±¨µÈ½ÌÓýÌØ¿¯£¨THE£©ÔÚ12ÈÕ¹«²¼2020ÄêÊÀ½ç´óÑ§ÅÅÃû£¬Ì¨ÍåµÄ´óÑ§Àï£¬ÒÔÌ¨Íå´óÑ§±íÏÖ×î¼Ñ£¬½ÏÉÏ½ìÒ»¿ÚÆøÅÊÉý50¸öÃû´Î£¬Õâ´ÎÅÅÔÚµÚ120Ãû¡£ÔÚÈ«ÇòÅÅÃû²¿·Ö£¬½ñÄêÅ£½ò´óÑ§Á¬ÐøµÚ4ÄêÅÅÃûÈ«ÇòµÚÒ»£¬¼ÓÖÝÀí¹¤Ñ§Ôº´ÓµÚ5ÃûÉÏÉýÖÁµÚ2¡£</p>
-<p>Ì©ÎîÊ¿±¨¸ßµÈ½ÌÓýÌØ¿¯µÄÕâ·ÝÅÅÃû£¬°üÀ¨À´×Ô92¸ö¹ú¼ÒºÍµØÇø£¬³¬¹ý1,300Ëù´óÑ§¡£½ñÄêÌ¨ÍåÓÐ36Ëù´óÑ§Èë°ñ£¬±ÈÈ¥ÄêµÄ32ËùÔö¼Ó4Ëù¡£¶øÌ¨Íå´óÑ§ÊÇÌ¨ÍåÃû´Î×î¸ßµÄ´óÑ§£¬½ñÄêÅÅÔÚµÚ120Ãû£¬ÖµµÃÒ»Ìá£¬<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7.md">Ì¨´ó</a>µÄÃû´Î½ÏÈ¥ÄêÉÏÉý50Ãû£¬Ò²ÊÇÔÚÇ°200ÃûÀïÃû´Î½ø²½×î¶àµÄÒ»Ëù´óÑ§¡£</p>
-<p>ÖÁÓÚÇå»ª´óÑ§¼°Ì¨±±Ò½Ñ§´óÑ§ÔòÊÇ½øÈëÇ°400ÃûµÄÌ¨ÍåµÄ´óÑ§¡£¶øÅÅÃûÔÚ501ÖÁ600Ãû¼äµÄ£¬°üÀ¨£ºÖÐ¹úÒ½Ò©´óÑ§¡¢¹úÁ¢½»Í¨´óÑ§¡¢¹úÁ¢Ì¨Íå¿Æ¼¼´óÑ§¡¢¹úÁ¢ÑôÃ÷´óÑ§µÈ£¬ÅÅÃûÔÚ601ÖÁ800ÃûÖ®¼äÔò°üÀ¨£º¹úÁ¢³É¹¦´óÑ§¡¢¹úÁ¢Ì¨ÍåÊ¦·¶´óÑ§µÈ¡£</p>
-<p>THEÅÅÃû±à¼­²©Ë¼Î¤¶û£¨Ellie Bothwell£©±íÊ¾£ºÌ¨Íå´óÑ§µÄÅÅÃûÉÏÉý50Ãû£¬ÕâÈ·ÊµÊÇÒ»ÏîÌØ±ð½Ü³öµÄ³É¾Í£¬ÓÈÆäÔÚÃæ¶ÔÃÀ¹úÓëÓ¢¹úµÈ´óÑ§£¬ÒÔ¼°ÑÇÖÞ´óÑ§µÄ¾ºÕùÖ®ÏÂ£¬<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7.md">Ì¨´ó</a>ÈÔÔÚ²»¶ÏÌá¸ßÑÐ¾¿Æ·ÖÊÓëÓ°ÏìÁ¦¡£Ëû½¨Òé£¬Ì¨´ó»¹ÊÇ±ØÐëµÃÍ¶×Ê¸ÄÉÆ½ÌÑ§»·¾³£¬Ò²µÃÇ¿»¯Óë¹ú¼Ê¼äµÄºÏ×÷¹ØÏµ£¬Î´À´µÄÅÅÃû²ÅµÃÒÔÔÙÍùÇ°½ø¡£</p>
-<p>Ì¨´ó±íÊ¾£¬ÓÉÓÚÌ¨´óÊÇ×ÛºÏÐÔ´óÑ§£¬ÒªÈ«ÃæÐÔ·¢Õ¹£¬ÇÒÆ«ÖØÓÚ½ÌÊ¦ÑÐ¾¿µÄÆ·ÖÊºÍ¹ú¼Ê»¯¡£ÑÐ¾¿Æ·ÖÊ»á·´Ó³ÔÚÂÛÎÄÒýÓÃÊý£¬Òò´ËÑ§Ð£Ò²¹ÄÀø½ÌÊ¦ÑÐ¾¿³É¹ûÆ·ÖÊ¸üÖØÓÚÊýÁ¿¡£ÖÁÓÚ¹ú¼Ê»¯µÄ²¿·Ö£¬ËûÃÇ»¹ÓÐºÜ¶àÅ¬Á¦¿Õ¼ä£¬Õâ³ýÁË¸ü»ý¼«Ïòº£ÍâÕÐÉúÍâ£¬Ò²»áÌá¹©½±Ñ§½ð£¬Ï£ÍûÎüÒý¸ü¶àÓÅÐãÑ§Éú¡£</p>
-<p>ÔÚÈ«ÇòÅÅÃû²¿·Ö£¬½ñÄêÅ£½ò´óÑ§Á¬ÐøµÚ4ÄêÅÅÃûÈ«ÇòµÚÒ»£¬¼ÓÖÝÀí¹¤Ñ§Ôº´ÓµÚ5ÃûÉÏÉýÖÁµÚ2¡£½£ÇÅ´óÑ§¡¢Ê·µ¤·ð´óÑ§¼°ÂéÊ¡Àí¹¤Ñ§Ôº£¨MIT£©Õ¼¾ÝµÚ3ÖÁµÚ5£¬ÆÕÁÖË¹¶Ù´óÑ§¼°¹þ·ð´óÑ§»¥»»Î»ÖÃ£¬·Ö±ðÅÅÃûµÚ6¡¢µÚ7¡£Ò®Â³´óÑ§ÎÈ¾ÓµÚ8£¬Ö¥¼Ó¸ç´óÑ§ÉÏÉýÒ»Î»ÖÁµÚ9£¬¶øÂ×¶ØµÛ¹úÑ§ÔºÏÂ½µÒ»Î»£¬ÅÅÃûµÚ10¡£</p>
-<p>ÔðÈÎ±à¼­£ºÓñÕä</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ12æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¼ åŽŸå½°å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰è‹±å›½æ³°æ™¤å£«æŠ¥ç­‰æ•™è‚²ç‰¹åˆŠï¼ˆTHEï¼‰åœ¨12æ—¥å…¬å¸ƒ2020å¹´ä¸–ç•Œå¤§å­¦æŽ’åï¼Œå°æ¹¾çš„å¤§å­¦é‡Œï¼Œä»¥å°æ¹¾å¤§å­¦è¡¨çŽ°æœ€ä½³ï¼Œè¾ƒä¸Šå±Šä¸€å£æ°”æ”€å‡50ä¸ªåæ¬¡ï¼Œè¿™æ¬¡æŽ’åœ¨ç¬¬120åã€‚åœ¨å…¨çƒæŽ’åéƒ¨åˆ†ï¼Œä»Šå¹´ç‰›æ´¥å¤§å­¦è¿žç»­ç¬¬4å¹´æŽ’åå…¨çƒç¬¬ä¸€ï¼ŒåŠ å·žç†å·¥å­¦é™¢ä»Žç¬¬5åä¸Šå‡è‡³ç¬¬2ã€‚</p>
+<p>æ³°æ™¤å£«æŠ¥é«˜ç­‰æ•™è‚²ç‰¹åˆŠçš„è¿™ä»½æŽ’åï¼ŒåŒ…æ‹¬æ¥è‡ª92ä¸ªå›½å®¶å’Œåœ°åŒºï¼Œè¶…è¿‡1,300æ‰€å¤§å­¦ã€‚ä»Šå¹´å°æ¹¾æœ‰36æ‰€å¤§å­¦å…¥æ¦œï¼Œæ¯”åŽ»å¹´çš„32æ‰€å¢žåŠ 4æ‰€ã€‚è€Œå°æ¹¾å¤§å­¦æ˜¯å°æ¹¾åæ¬¡æœ€é«˜çš„å¤§å­¦ï¼Œä»Šå¹´æŽ’åœ¨ç¬¬120åï¼Œå€¼å¾—ä¸€æï¼Œ<ahref="https://github.com/wdr216/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7.md#1">å°å¤§</a>çš„åæ¬¡è¾ƒåŽ»å¹´ä¸Šå‡50åï¼Œä¹Ÿæ˜¯åœ¨å‰200åé‡Œåæ¬¡è¿›æ­¥æœ€å¤šçš„ä¸€æ‰€å¤§å­¦ã€‚</p>
+<p>è‡³äºŽæ¸…åŽå¤§å­¦åŠå°åŒ—åŒ»å­¦å¤§å­¦åˆ™æ˜¯è¿›å…¥å‰400åçš„å°æ¹¾çš„å¤§å­¦ã€‚è€ŒæŽ’ååœ¨501è‡³600åé—´çš„ï¼ŒåŒ…æ‹¬ï¼šä¸­å›½åŒ»è¯å¤§å­¦ã€å›½ç«‹äº¤é€šå¤§å­¦ã€å›½ç«‹å°æ¹¾ç§‘æŠ€å¤§å­¦ã€å›½ç«‹é˜³æ˜Žå¤§å­¦ç­‰ï¼ŒæŽ’ååœ¨601è‡³800åä¹‹é—´åˆ™åŒ…æ‹¬ï¼šå›½ç«‹æˆåŠŸå¤§å­¦ã€å›½ç«‹å°æ¹¾å¸ˆèŒƒå¤§å­¦ç­‰ã€‚</p>
+<p>THEæŽ’åç¼–è¾‘åšæ€éŸ¦å°”ï¼ˆEllie Bothwellï¼‰è¡¨ç¤ºï¼šå°æ¹¾å¤§å­¦çš„æŽ’åä¸Šå‡50åï¼Œè¿™ç¡®å®žæ˜¯ä¸€é¡¹ç‰¹åˆ«æ°å‡ºçš„æˆå°±ï¼Œå°¤å…¶åœ¨é¢å¯¹ç¾Žå›½ä¸Žè‹±å›½ç­‰å¤§å­¦ï¼Œä»¥åŠäºšæ´²å¤§å­¦çš„ç«žäº‰ä¹‹ä¸‹ï¼Œ<ahref="https://github.com/wdr216/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7.md#1">å°å¤§</a>ä»åœ¨ä¸æ–­æé«˜ç ”ç©¶å“è´¨ä¸Žå½±å“åŠ›ã€‚ä»–å»ºè®®ï¼Œå°å¤§è¿˜æ˜¯å¿…é¡»å¾—æŠ•èµ„æ”¹å–„æ•™å­¦çŽ¯å¢ƒï¼Œä¹Ÿå¾—å¼ºåŒ–ä¸Žå›½é™…é—´çš„åˆä½œå…³ç³»ï¼Œæœªæ¥çš„æŽ’åæ‰å¾—ä»¥å†å¾€å‰è¿›ã€‚</p>
+<p>å°å¤§è¡¨ç¤ºï¼Œç”±äºŽå°å¤§æ˜¯ç»¼åˆæ€§å¤§å­¦ï¼Œè¦å…¨é¢æ€§å‘å±•ï¼Œä¸”åé‡äºŽæ•™å¸ˆç ”ç©¶çš„å“è´¨å’Œå›½é™…åŒ–ã€‚ç ”ç©¶å“è´¨ä¼šåæ˜ åœ¨è®ºæ–‡å¼•ç”¨æ•°ï¼Œå› æ­¤å­¦æ ¡ä¹Ÿé¼“åŠ±æ•™å¸ˆç ”ç©¶æˆæžœå“è´¨æ›´é‡äºŽæ•°é‡ã€‚è‡³äºŽå›½é™…åŒ–çš„éƒ¨åˆ†ï¼Œä»–ä»¬è¿˜æœ‰å¾ˆå¤šåŠªåŠ›ç©ºé—´ï¼Œè¿™é™¤äº†æ›´ç§¯æžå‘æµ·å¤–æ‹›ç”Ÿå¤–ï¼Œä¹Ÿä¼šæä¾›å¥–å­¦é‡‘ï¼Œå¸Œæœ›å¸å¼•æ›´å¤šä¼˜ç§€å­¦ç”Ÿã€‚</p>
+<p>åœ¨å…¨çƒæŽ’åéƒ¨åˆ†ï¼Œä»Šå¹´ç‰›æ´¥å¤§å­¦è¿žç»­ç¬¬4å¹´æŽ’åå…¨çƒç¬¬ä¸€ï¼ŒåŠ å·žç†å·¥å­¦é™¢ä»Žç¬¬5åä¸Šå‡è‡³ç¬¬2ã€‚å‰‘æ¡¥å¤§å­¦ã€å²ä¸¹ä½›å¤§å­¦åŠéº»çœç†å·¥å­¦é™¢ï¼ˆMITï¼‰å æ®ç¬¬3è‡³ç¬¬5ï¼Œæ™®æž—æ–¯é¡¿å¤§å­¦åŠå“ˆä½›å¤§å­¦äº’æ¢ä½ç½®ï¼Œåˆ†åˆ«æŽ’åç¬¬6ã€ç¬¬7ã€‚è€¶é²å¤§å­¦ç¨³å±…ç¬¬8ï¼ŒèŠåŠ å“¥å¤§å­¦ä¸Šå‡ä¸€ä½è‡³ç¬¬9ï¼Œè€Œä¼¦æ•¦å¸å›½å­¦é™¢ä¸‹é™ä¸€ä½ï¼ŒæŽ’åç¬¬10ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‰ç</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/12/n11516751.htm">ÊÀ½ç´óÑ§ÅÅÃû Å£½òµÚÒ» Ì¨´ó½ø²½50Ãû</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11514053.htm">Ì¨´ó´´ÐÂÍõ³æ·ìºÏ·¨ ½µµÍ²úºó³öÑªÕª×Ó¹¬¸ÅÂÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11513006.htm">Ì¨´óÒ½ÔºÐÂÖñÉúÒ½·ÖÔºÔ¤¶¨12ÔÂ¿ªÔºÓªÔË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/23/n11472667.htm">°® ? ÉáµÃ    Ì¨´óÒ½ÔºÐÂÖñ·ÖÔºÐûµ¼Æ÷¹Ù¾èÔùÒâÒå</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468184.htm">Ì¨´óÊ×½¨2700Äê½µÓê¼ÍÂ¼ ¸Éºµ»ò·ÇÈ«ÇòÅ¯»¯ËùÖÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11450642.htm">±ÜÃâÕçÊÔ³¬¶î Ì¨´ó¸öÈËÉêÇëÄâÔö±ÊÊÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11439826.htm">Ê¥ÎÄÉ­×¤Ì¨´óÊ¹¹Ý½ÒÅÆ Ì¨¸±×ÜÍ³ÅÎË«·½Éî»¯ºÏ×÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/19/n11395056.htm">´óÑ§Ö¸¿¼³É¼¨·Å°ñ ÐÂ×¡ÃñÖ®×Ó¹¥¶¥Ì¨´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11380868.htm">ÐÄÔàÍ£Ö¹50Ìì Ì¨´ó³É¹¦»»ÐÄ´´¼ÍÂ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/3/n11362741.htm">»¶¸èÐ¦Óï Ì¨´óÐ£ÓÑÒ°²Í¾Û»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/17/n11328856.htm">Ïã¹½Ï´¶ÔÁËÂð£¿Ì¨´ó½ÌÊÚ£º¹½ÀàÕâÑùÏ´²Å¸É¾»</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11514528.htm">ÂíÔÆ±»ÆÈ½»È¨£¿ Ôø×Ô³ÆÏÕÐ©¡°ÖÐ¶¾¶øËÀ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11513066.htm">¡¾·­Ç½±Ø¿´¡¿ÑëÊÓ¶­Ù»µ±ÖÐ¹²°ïÐ×ÏÝÈëÂé·³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11514904.htm">ÖÐ·½È¡Ïû²¿·Ö¶ÔÃÀ²úÆ·¹ØË° ´¨ÆÕ£º²»¾ªÑÈ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11514694.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖíÈâ¼Ûì­Éý ÖÐ¹ú¾­¼ÃÓÐ¶àÔã¸â£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11498523.htm">Îå¸öºÍÉÐÈ¥´¦²»Í¬ Éñ·ð¿´µÄÊÇÈËÐÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11497534.htm">¡¾²¦¿ªÃÔÎí¡¿Í¬ÄêÔÂÈÕÊ±³öÉúµÄÈË ÃüÔË»áÏàÍ¬Âð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/23/n11473114.htm">Çå³¯ÆæÎÅ ê¼»¨×ªÊÀµÄÉñÍ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/6/23/n8028273.htm">¡¾ÎÄÊ·¡¿Ã÷³É×æÇ¨¶¼±±¾© ÈëÖ÷×Ï½û³ÇµÚÒ»ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/9/n11510285.htm">É¹ÓëÌ«Ì«Ø¥ÄêÇ°ºÏÕÕ ¶ÅãëÔó¸Ð¿®£º·Â·ðÊÇ×òÌì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11514544.htm">ÂíÔÆº¬ÀáÐ¶ÈÎ¶­ÊÂ³¤ Äê»á»¯ÉíÒ¡¹ö¸èÊÖÒýÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/9/n11509939.htm">ÉùÔ®·´ËÍÖÐÑ¡ÃÀÔâÌÔÌ­£¿ÁºÃôÇÉ»ñÔÞÕæ¸Û½ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11512422.htm">ÈÔÎ´³ö¹ú»ò±»ÏÞÖÆ³ö¾³ ·¶±ù±ùÐÂÆ¬ÌæÉíÒÉ»»Á³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11511395.htm">ÑîÀö»¨ÅÄÏ·ÒâÍâ×¹Âí µ­¶¨ÅÄÍê¾´Òµ»ñÔÞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11514450.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹²¹ÙÃ½9.11ÔìÒ¥ ±»Ö¸ÎÞÈËÐÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11512553.htm">¡¾ÐÂÎÅ¿´µã¡¿ÂíÔÆ½»°à ´óÂ½ÃñÆóµÄÀ§¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11510660.htm">¡¾Ê®×ÖÂ·¿Ú¡¿·´ËÍÖÐÊ®´óÊ·Ê«Æ¬¶Î¹ÄÎèÈËÐÄ(ÏÂ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11510712.htm">¡¾·­Ç½±Ø¿´¡¿ÃÀ¹ÙÔ±ÓëÁõº×Í¨»° ÁõÔÙ´ÎÇóºÍ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11512553.htm">¡¾ÐÂÎÅ¿´µã¡¿ÂíÔÆ½»°à ´óÂ½ÃñÆóµÄÀ§¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11512402.htm">¡¾¿ìÑ¶¡¿´¨ÆÕ×ÜÍ³½â¹Í¹ú°²¹ËÎÊ²©¶û¶Ù</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/6/17/n11328856.md#1">é¦™è‡æ´—å¯¹äº†å—ï¼Ÿå°å¤§æ•™æŽˆï¼šè‡ç±»è¿™æ ·æ´—æ‰å¹²å‡€</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/7/3/n11362741.md#1">æ¬¢æ­Œç¬‘è¯­ å°å¤§æ ¡å‹é‡Žé¤èšä¼š</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/7/12/n11380868.md#1">å¿ƒè„åœæ­¢50å¤© å°å¤§æˆåŠŸæ¢å¿ƒåˆ›çºªå½•</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/7/19/n11395056.md#1">å¤§å­¦æŒ‡è€ƒæˆç»©æ”¾æ¦œ æ–°ä½æ°‘ä¹‹å­æ”»é¡¶å°å¤§</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/8/8/n11439826.md#1">åœ£æ–‡æ£®é©»å°å¤§ä½¿é¦†æ­ç‰Œ å°å‰¯æ€»ç»Ÿç›¼åŒæ–¹æ·±åŒ–åˆä½œ</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/8/13/n11450642.md#1">é¿å…ç”„è¯•è¶…é¢ å°å¤§ä¸ªäººç”³è¯·æ‹Ÿå¢žç¬”è¯•</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/8/21/n11468184.md#1">å°å¤§é¦–å»º2700å¹´é™é›¨çºªå½• å¹²æ—±æˆ–éžå…¨çƒæš–åŒ–æ‰€è‡´</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/8/23/n11472667.md#1">çˆ± ? èˆå¾—    å°å¤§åŒ»é™¢æ–°ç«¹åˆ†é™¢å®£å¯¼å™¨å®˜æèµ æ„ä¹‰</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/9/11/n11513006.md#1">å°å¤§åŒ»é™¢æ–°ç«¹ç”ŸåŒ»åˆ†é™¢é¢„å®š12æœˆå¼€é™¢è¥è¿</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/19/9/11/n11514053.md#1">å°å¤§åˆ›æ–°çŽ‹è™«ç¼åˆæ³• é™ä½Žäº§åŽå‡ºè¡€æ‘˜å­å®«æ¦‚çŽ‡</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/9/12/n11516751.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">è¢æ–Œï¼šè®¡åˆ’ç”Ÿè‚²ï¼Œé…¿æˆäº†å¤šå°‘ç­ç»äººæ€§çš„æƒ¨å‰§</a></li><li><a href="https://github.com/wdr216/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">ä¸­å…±çš„ä¼ªç«éª—å±€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">çº½çº¦å·žå…­ä½å‚è®®å‘˜ç¥è´ºæ³•è½®å¤§æ³•æ—¥</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078341.md#1">é‡‘æ­£æ©è‹¥çªåž®å° ç¾Žå°†å¯åŠ¨â€œä¸å¯èƒ½çš„ä»»åŠ¡â€</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078278.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘åŒ—äº¬æ–°è§„ æˆ¿åœ°äº§æé¢ä¸´å€’é—­æ½®</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1">é­å¤®è§†è¿žéª‚ä¸‰å¤© è“¬ä½©å¥¥ååœ¨ä¸­å›½äººæ°”é£™å‡</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078195.md#1">æ–‡é©é‡æ¥ï¼Ÿæ¹–åŒ—åˆ˜è‰³ä¸½å› è¨€èŽ·ç½ªè¢«åˆ¤å››å¹´</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078410.md#1">ä¸¤ä¼šå‰â€œçº¢äºŒä»£â€å‘ä¿¡å¯¹æŽï¼Ÿä¸­å—æµ·åšå¼ˆæ¿€çƒˆ</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078172.md#1">èŒƒå†°å†°è¢«å µç»è´¢è·¯ï¼Ÿä¼ é­å¹¿ç”µæ€»å±€ç¦ç›´æ’­å–è´§</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/1/n12075345.md#1">æµæµªçŒ«å¦ˆå¦ˆå¸¦å°çŒ«ä¸ŠåŒ»é™¢èŽ·å¾—å¸®åŠ© ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079058.md#1">è”¡é˜¿å˜ŽäºŒå®æ»¡æœˆ å–œæ”¶è”¡æ€»ç»Ÿæš–å¿ƒè´ºç¤¼</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/1/n12074853.md#1">ã€Šå±é™©è°Žè¨€ã€‹å½±è¯„ï¼šæ„å¤–ä¹‹è´¢ åè€Œæ˜¯æŒ‘æˆ˜å¼€å§‹</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/1/n12076299.md#1">â€œæµè¡Œå¤©åŽâ€éº¦å½“å¨œè‡ªæ›æ£€æµ‹å‡ºä¸­å…±ç—…æ¯’æŠ—ä½“</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/2/25/n11893623.md#1">ã€å‘½ç†ã€‘ä»–ä¸ºä½•ç”±ç›¸ä¿¡å‘½è¿å˜æˆä¸ç›¸ä¿¡å‘½è¿ï¼Ÿ</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/4/30/n12073552.md#1">ä¸€ç”Ÿæ³¢æŠ˜éš¾æŽ©å…¶é£ŽåŽ ä¸œæ±‰æ‰å¥³è”¡æ–‡å§¬</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/4/30/n12073149.md#1">â€œç•™ç™½â€çš„è‰ºæœ¯ä¸Žäººç”Ÿ</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/4/24/n12059149.md#1">æ˜Ÿå­›ä¸Žäººäº‹é¥ç›¸å‘¼åº” å¹¶éžæµªå¾—è™šå</a></li>
+<li><a href="https://github.com/wdr216/djy/blob/master/gb/20/4/12/n12024956.md#1">ã€é¦¨é¦™é›…å¥ã€‘è¯—è¯ä¸­çš„å¥³å­©å</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/wdr216/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/wdr216/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/12/n11516751.htm">ä¸–ç•Œå¤§å­¦æŽ’å ç‰›æ´¥ç¬¬ä¸€ å°å¤§è¿›æ­¥50å</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wdr216/djy/blob/master/gb/19/9/12/n11516751.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/wdr216/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/wdr216/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/wdr216/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/wdr216/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wdr216/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
