--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079965.md#1" title="世界新闻日 中共打压新闻自由殃及全球生命""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/1920px-Press_freedom_2020.svg_-320x200.png">&nbsp;</a>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wdr216.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081616.md#1">四川三岁女童疑遭继母虐待致死</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080106.md#1">【瘟疫与中共】华裔女作家去世引发的思考</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081444.md#1">中国五一假期游客减半 收入仅去年三成</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081208.md#1">许广高速连州段小车撞防护栏起火 5人遇难</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081616.md#1">四川三岁女童疑遭继母虐待致死</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080106.md#1">【瘟疫与中共】华裔女作家去世引发的思考</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081444.md#1">中国五一假期游客减半 收入仅去年三成</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081208.md#1">许广高速连州段小车撞防护栏起火 5人遇难</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078195.md#1">文革重来？湖北刘艳丽因言获罪被判四年</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,428,395 人
+!共 355,428,740 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
